[gd_scene load_steps=2 format=3 uid="uid://c75u0igeymjnv"]

[ext_resource type="Script" uid="uid://7ig4mvcpgvke" path="res://scenes/menu/components/sound_editor.gd" id="2_g2758"]

[node name="SoundEditor" type="HBoxContainer"]
offset_right = 60.0
offset_bottom = 23.0
script = ExtResource("2_g2758")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SOUND EDITOR"

[node name="Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 200.0
step = 0.1
value = 54.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
text = "11"
placeholder_text = "123"
alignment = 1
max_length = 4
editable = false

[connection signal="value_changed" from="VBoxContainer/Slider" to="." method="_on_slider_value_changed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
